--- a/.github/workflows/IPQ807X-WIFI.yml
+++ b/.github/workflows/IPQ807X-WIFI.yml
@@ -24,7 +24,7 @@ env:
   REPO_BRANCH: main
   CONFIG_FILE: config/ipq807x-wifi.config
   PATCHES_FILE_1: patches/0001-show-soc-status-on-luci.patch
-  DIY_SCRIPT: diy-script.sh
+  DIY_SCRIPT: custom/diy-script.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: false
   UPLOAD_BIN_DIR: false
