--- a/config/ipq807x-wifi.config
+++ b/config/ipq807x-wifi.config
@@ -44,6 +44,7 @@ CONFIG_OPENSSL_WITH_SRP=y
 CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 CONFIG_PACKAGE_6rd=y
+CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_ath10k-board-qca9887=y
 CONFIG_PACKAGE_ath10k-firmware-qca9887-ct=y
 CONFIG_PACKAGE_ath11k-firmware-qcn9074=y
@@ -57,6 +58,7 @@ CONFIG_PACKAGE_dnsmasq_full_ipset=y
 # CONFIG_PACKAGE_dnsmasq_full_nftset is not set
 CONFIG_PACKAGE_f2fsck=m
 CONFIG_PACKAGE_haproxy=y
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ipset=y
